# complemento-tesouro-direto

./: .gitignore  .python-version  Cargo.toml  README.md  requirements.txt
complemento_tesouro_direto/: baixar_ipcas.py  detectar_titulos_validos.py  limpar_dados.py  simular_investimento_perfeito.py
src/: decimal.rs  estrategias.rs  fluxo_investimento.rs  impostos_e_taxas.rs  inflacao.rs  ler_titulos.rs  main.rs  quantidade_ou_valor.rs  renda_semestral.rs  serie_temporal.rs  tipo_titulo.rs  titulo.rs
src/estrategias/: mod.rs  quantidade_constante.rs  valor_real_constante.rs  venda_continua.rs
