[package]
name = "complemento-tesouro-direto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.2.2"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
